adding @brozeph/mongoose-middleware dependency instead of the original

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "@babel/runtime": "^7.12.5",
+    "@brozeph/mongoose-middleware": "^3.0.0",
     "boom": "^7.3.0",
     "bunyan": "^1.8.15",
     "countdown": "^2.6.0",
@@ -52,7 +53,6 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^10.0.0",
     "mongoose": "^5.11.11",
-    "mongoose-middleware": "^2.0.1",
     "reqlib": "^1.0.12",
     "settings-lib": "^1.1.4",
     "source-map-support": "^0.5.19",
